# ffstudio

./: CMakeLists.txt  README.md  audio2.pcm  main.c
audio_swr/: audio_swr.c  audio_swr.h
create_aac/: create_aac.c  create_aac.h
h264_encoder/: h264_encoder.c  h264_encoder.h
one/: one.c  one.h
record_audio/: record_audio.c  record_audio.h
video_record/: video_record.c  video_record.h
